[package]
name = "signum-cli"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "signumcli"
path = "src/main.rs"

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11.5", features = ["cookies", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.7", features = ["serde"] }

[dev-dependencies]
actix-rt = "2"
wiremock = "0.5.7"
