[package]
name = "signum-node-rs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "signum-node-rs"


[dependencies]
anyhow = "1.0.57"
rand = "0.8.5"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_with = { version = "1.13.0", features = ["serde_json"] }
sqlx = { version = "0.5.13", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.17.0", features = ["full"] }
tonic = "0.7.1"
tracing = { version = "0.1.34", features = ["log"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.3"

url = { version = "2.2.2", features = ["serde"] }
