[package]
name = "signum-node-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "signum-node-rs"

[features]
bunyan = ["dep:tracing-bunyan-formatter"]
tokio-console = ["dep:console-subscriber", "tokio/tracing"]

[dependencies]
actix-web = { version = "4.5.1", features = ["rustls"] }
anyhow = "1.0"
config = "0.14.0"
console-subscriber = { version = "0.2.0", optional = true }
futures = "0.3.30"
itertools = "0.13.0"
num-bigint = { version = "0.4.5", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls", "cookies"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.6" }
sqlx = { version = "0.7", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "chrono",
] }
surrealdb = { version = "1.3.1", features = ["kv-speedb", "kv-mem"] }
thiserror = "1.0.56"
tokio = { version = "1.35", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7.9"
tracing-bunyan-formatter = { version = "0.3", optional = true }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
once_cell = "1.19.0"
