[package]
name = "signum-cli"
version = "0.1.0"
edition = "2018"
description = "Does an awesome."

[lib]
path = "src/lib.rs"

[[bin]]
name = "signumcli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ['derive'] }
reqwest = { version = "0.11", features = ["cookies", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signum-rs = {path = "../signum-rs"}
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.7", features = ["serde"] }

[dev-dependencies]
actix-rt = "2"
wiremock = "0.5"
