[package]
name = "signum-node-rs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "signum-node-rs"

[features]
bunyan = ["dep:tracing-bunyan-formatter"]
tokio-console = ["dep:console-subscriber", "tokio/tracing"]

[dependencies]
anyhow = "1.0"
config = "0.14.0"
console-subscriber = { version = "0.2.0", optional = true }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.6" }
sqlx = { version = "0.7", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "chrono",
] }
thiserror = "1.0.56"
tokio = { version = "1.35", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = { version = "0.3", optional = true }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4"] }
