[package]
name = "signum-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
reqwest = { version = "0.11.6", features = ["cookies", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde-aux = "3.0.1"
serde_json = "1.0.68"
uuid = { version = "0.8.2", features = ["serde"] }
