[package]
name = "signum-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.4"
serde_json = "1.0"
uuid = { version = "1.7", features = ["serde"] }
